# plain_mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  env.example  example_config.json  install.sh  pyproject.toml  requirements.txt
.cursor/rules/: conventional-commits.md  linting-workflow.md  project-context.md  testing-workflow.md
.github/workflows/: ci.yml
examples/: usage_example.py
plain_mcp_server/: __init__.py  fastserver.py  server.py
resources/: plain_schema.graphql
tests/: __init__.py  conftest.py  test_client.py  test_data.py  test_fastserver.py  test_integration.py  test_server.py
