[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plain-mcp-server"
version = "0.1.0"
description = "MCP server for Plain.com customer support operations"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0"
]

[project.scripts]
plain-mcp-server = "plain_mcp_server.server:main"

[tool.ruff]
target-version = "py39"
line-length = 100
preview = true  # Enable preview rules for S404

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "S",    # flake8-bandit (security)
]
ignore = [
    "S101",  # Use of assert detected (equivalent to bandit B101)
    "S110",  # try-except-pass (common pattern in tests)
    "S603",  # subprocess call (equivalent to bandit B603)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff.lint.flake8-bandit]
# Configure bandit security checks
check-typed-exception = true
hardcoded-tmp-directory = ["/tmp", "/var/tmp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=plain_mcp_server",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80"
]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests"
]
